[gd_scene load_steps=7 format=3 uid="uid://dj8xvoqmjk0tj"]

[ext_resource type="Theme" uid="uid://couj4xn5an16x" path="res://themes/header_label.tres" id="1_n87rw"]
[ext_resource type="Script" uid="uid://cdjhq8iuor8v8" path="res://scripts/pause_menu.gd" id="2_5d2l8"]
[ext_resource type="Theme" uid="uid://5nde0l3be8rs" path="res://themes/menu_default.tres" id="2_myx47"]
[ext_resource type="Texture2D" uid="uid://dtqnsfkyvdpl8" path="res://themes/icons/close_240dp_EDE28F.svg" id="3_kukqi"]
[ext_resource type="Texture2D" uid="uid://do27du855hiu0" path="res://themes/icons/arrow_left_240dp_EDE28F_FILL0_wght400_GRAD0_opsz48.svg" id="5_7l7mv"]
[ext_resource type="Texture2D" uid="uid://brq8o2rf36dhy" path="res://themes/icons/arrow_right_240dp_EDE28F_FILL0_wght400_GRAD0_opsz48.svg" id="6_v4r4p"]

[node name="PauseMenu" type="Control" node_paths=PackedStringArray("sliderArr")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_myx47")
script = ExtResource("2_5d2l8")
sliderArr = [NodePath("VBoxContainer/MusicHBoxContainer/HSlider"), NodePath("VBoxContainer/SoundEffectsHBoxContainer/HSlider"), NodePath("VBoxContainer/UiScaleHBoxContainer/HSlider")]

[node name="LabelPaused" type="Label" parent="."]
layout_mode = 2
offset_left = 10.0
offset_right = 423.0
offset_bottom = 147.0
theme = ExtResource("1_n87rw")
text = "Paused"

[node name="ButtonDefaultFocus" type="Button" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
focus_neighbor_left = NodePath("../VBoxContainer/MusicHBoxContainer/ButtonLess")
focus_neighbor_top = NodePath("../VBoxContainer/QuitGameButton")
focus_neighbor_right = NodePath("../VBoxContainer/MusicHBoxContainer/ButtonLess")
focus_neighbor_bottom = NodePath("../VBoxContainer/MusicHBoxContainer/ButtonLess")
focus_next = NodePath("../ButtonClose")
focus_previous = NodePath("../VBoxContainer/QuitGameButton")

[node name="ButtonClose" type="Button" parent="."]
layout_mode = 2
anchor_left = 1.0
anchor_right = 1.0
offset_left = -74.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 74.0
grow_horizontal = 0
tooltip_text = "Close the pause menu."
focus_neighbor_top = NodePath(".")
focus_previous = NodePath("../VBoxContainer/QuitGameButton")
mouse_default_cursor_shape = 2
icon = ExtResource("3_kukqi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -236.0
offset_top = -206.0
offset_right = 236.0
offset_bottom = 302.0
grow_horizontal = 2
grow_vertical = 2

[node name="MusicHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="VBoxContainer/MusicHBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Music"
horizontal_alignment = 2

[node name="ButtonLess" type="Button" parent="VBoxContainer/MusicHBoxContainer"]
layout_mode = 2
tooltip_text = "Decrease."
focus_neighbor_left = NodePath(".")
focus_neighbor_right = NodePath("../ButtonMore")
mouse_default_cursor_shape = 2
icon = ExtResource("5_7l7mv")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MusicHBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="VBoxContainer/MusicHBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Adjust music volume."
focus_neighbor_top = NodePath("../../../ButtonClose")
focus_neighbor_bottom = NodePath("../../SoundEffectsHBoxContainer/HSlider")
mouse_default_cursor_shape = 2
step = 5.0
value = 50.0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/MusicHBoxContainer"]
layout_mode = 2

[node name="ButtonMore" type="Button" parent="VBoxContainer/MusicHBoxContainer"]
layout_mode = 2
tooltip_text = "Increase."
focus_neighbor_left = NodePath("../ButtonLess")
mouse_default_cursor_shape = 2
icon = ExtResource("6_v4r4p")

[node name="SoundEffectsHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="VBoxContainer/SoundEffectsHBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "Sound effects"
horizontal_alignment = 2

[node name="ButtonLess" type="Button" parent="VBoxContainer/SoundEffectsHBoxContainer"]
layout_mode = 2
tooltip_text = "Decrease."
focus_neighbor_left = NodePath(".")
focus_neighbor_right = NodePath("../ButtonMore")
mouse_default_cursor_shape = 2
icon = ExtResource("5_7l7mv")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/SoundEffectsHBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="VBoxContainer/SoundEffectsHBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Adjust sound effect volume."
focus_neighbor_top = NodePath("../../MusicHBoxContainer/HSlider")
focus_neighbor_bottom = NodePath("../../UiScaleHBoxContainer/HSlider")
mouse_default_cursor_shape = 2
step = 5.0
value = 50.0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/SoundEffectsHBoxContainer"]
layout_mode = 2

[node name="ButtonMore" type="Button" parent="VBoxContainer/SoundEffectsHBoxContainer"]
layout_mode = 2
tooltip_text = "Increase."
focus_neighbor_left = NodePath("../ButtonLess")
mouse_default_cursor_shape = 2
icon = ExtResource("6_v4r4p")

[node name="UiScaleHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="Label" type="Label" parent="VBoxContainer/UiScaleHBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
text = "UI scale"
horizontal_alignment = 2

[node name="ButtonLess" type="Button" parent="VBoxContainer/UiScaleHBoxContainer"]
layout_mode = 2
tooltip_text = "Decrease."
focus_neighbor_left = NodePath(".")
focus_neighbor_right = NodePath("../ButtonMore")
mouse_default_cursor_shape = 2
icon = ExtResource("5_7l7mv")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/UiScaleHBoxContainer"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="VBoxContainer/UiScaleHBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Adjust size of the UI elements."
focus_neighbor_top = NodePath("../../SoundEffectsHBoxContainer/HSlider")
focus_neighbor_bottom = NodePath("../../ControlsButton")
mouse_default_cursor_shape = 2
step = 5.0
value = 50.0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/UiScaleHBoxContainer"]
layout_mode = 2

[node name="ButtonMore" type="Button" parent="VBoxContainer/UiScaleHBoxContainer"]
layout_mode = 2
tooltip_text = "Increase."
focus_neighbor_left = NodePath("../ButtonLess")
mouse_default_cursor_shape = 2
icon = ExtResource("6_v4r4p")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="ControlsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
tooltip_text = "Change the game's controls."
focus_neighbor_left = NodePath(".")
mouse_default_cursor_shape = 2
text = "Controls"

[node name="SaveGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
tooltip_text = "Save your progress."
focus_neighbor_left = NodePath(".")
mouse_default_cursor_shape = 2
text = "Save game"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="QuitGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
tooltip_text = "Exit the game."
focus_neighbor_left = NodePath(".")
focus_next = NodePath("../../ButtonClose")
mouse_default_cursor_shape = 2
text = "Quit game"

[connection signal="ready" from="ButtonDefaultFocus" to="ButtonDefaultFocus" method="grab_focus"]
[connection signal="pressed" from="ButtonClose" to="." method="queue_free"]
[connection signal="pressed" from="VBoxContainer/MusicHBoxContainer/ButtonLess" to="." method="_incdec_slider" binds= [0, false]]
[connection signal="pressed" from="VBoxContainer/MusicHBoxContainer/ButtonMore" to="." method="_incdec_slider" binds= [0, true]]
[connection signal="pressed" from="VBoxContainer/SoundEffectsHBoxContainer/ButtonLess" to="." method="_incdec_slider" binds= [1, false]]
[connection signal="pressed" from="VBoxContainer/SoundEffectsHBoxContainer/ButtonMore" to="." method="_incdec_slider" binds= [1, true]]
[connection signal="pressed" from="VBoxContainer/UiScaleHBoxContainer/ButtonLess" to="." method="_incdec_slider" binds= [2, false]]
[connection signal="pressed" from="VBoxContainer/UiScaleHBoxContainer/ButtonMore" to="." method="_incdec_slider" binds= [2, true]]
[connection signal="pressed" from="VBoxContainer/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
